--- a/package.json
+++ b/package.json
@@ -3,20 +3,39 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.6.2",
+    "@cloudinary/url-gen": "^1.7.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "apollo-server": "^3.7.0",
+    "apollo-upload-client": "^17.0.0",
+    "axios": "^0.27.2",
+    "cloudinary-core": "^2.12.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
+    "express": "^4.18.1",
+    "firebase": "^9.7.0",
+    "firebaseui": "^6.0.1",
+    "graphql": "^16.4.0",
+    "jquery": "^3.6.0",
+    "nodemon": "^2.0.16",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-dropzone": "^14.2.0",
+    "react-firebase-hooks": "^5.0.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.51.0",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server-start": "nodemon server/index.js"
   },
   "eslintConfig": {
     "extends": [
