added about page info

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "tweeeeetur",
-  "name": "tweeeeetur. microblogging app.",
+  "name": "tweeeeetur. microblogging website.",
   "icons": [
     {
       "src": "favicon.ico",
